--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -41,7 +41,7 @@ jobs:
         with:
           go-version: '1.24.1'
       - name: Build ${{ matrix.goos }}-${{ matrix.goarch }}
-        run:
+        run: |-
           mkdir ./output
           go build -v . -o '$FILE_NAME'
         env:
