--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -41,9 +41,7 @@ jobs:
         with:
           go-version: '1.24.1'
       - name: Build ${{ matrix.goos }}-${{ matrix.goarch }}
-        run: |-
-          mkdir ./output
-          go build -v . -o '$FILE_NAME'
+        run: go build -v . -o '$FILE_NAME'
         env:
           GOOS: ${{ matrix.goos }}
           GOARCH: ${{ matrix.goarch }}
